--- a/scss/compnents/_components.scss
+++ b/scss/compnents/_components.scss
@@ -2,14 +2,15 @@
 header {
     padding: 2.5rem 1rem 1rem 1rem;
     margin-top: 3rem;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
+    width: 90%;
 }
 
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin: 0 auto;
     text-align: center;
-    letter-spacing: 1.75px;
+    // letter-spacing: 1.5px;
 }
 
 .header__title h1:nth-child(1) {
@@ -19,24 +20,29 @@ h1 {
 
 .header__title h1:nth-child(2) {
     color: $VeryDarkBlue;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.3rem;
     font-weight: 700;
 }
 
 .header__text {
     color: $GrayishBlue;
     text-align: center;
-    font-size: 1rem;
-    letter-spacing: .5px;
+    font-size: 1.2rem;
     margin-bottom: 2rem;
+    line-height: 1.7;
 }
 
 //Cards
 //Card
 .card {
-    box-shadow: 1px 0px 10px $GrayishBlue;
-    margin: 0 1rem 1.5rem 1rem;
+    box-shadow: 1px 10px 20px $GrayishBlue;
+    margin: 0 1rem 2.3rem 1rem;
     border-radius: 10px;
+    &__title {
+        margin-top: 1.5rem;
+        font-size: 1.5rem;
+        color: $VeryDarkBlue;
+    }
 }
 
 .card__title,
@@ -75,9 +81,7 @@ h1 {
 }
 
 img {
-    // width: 100%;
     padding-left: 75%;
     padding-top: 3rem;
-    padding-bottom: 1.75rem;
-    grid-te
+    padding-bottom: 1rem;
 }
