LAYOUT: Desktop layout complete.

--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+.heading-font {
+  font-size: 1.8rem;
+}
+
 header {
   padding: 2.5rem 1rem 1rem 1rem;
   margin-top: 3rem;
@@ -84,6 +88,70 @@ img {
   padding-bottom: 1rem;
 }
 
+@media screen and (min-width: 1440px) {
+  .container {
+    display: -ms-grid;
+    display: grid;
+    width: 80%;
+  }
+  header {
+    margin: 0 auto;
+    text-align: center;
+    width: 42%;
+  }
+  .cards {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 3;
+        grid-template-rows: 3;
+        grid-template-areas: ". team-builder ." "supervisor . calculator" ". karma .";
+  }
+  .card {
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 0 auto;
+    text-align: left;
+    width: calc(90%);
+    height: auto;
+    margin-bottom: 4rem;
+  }
+  .card__title, .card__body {
+    width: 70%;
+    padding-left: 3.5rem;
+  }
+  #team-builder {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: team-builder;
+    margin-bottom: -9rem;
+  }
+  #supervisor {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: supervisor;
+  }
+  #karma {
+    -ms-grid-row: 3;
+    -ms-grid-column: 2;
+    grid-area: karma;
+    margin-top: -13rem;
+  }
+  #calculator {
+    -ms-grid-row: 2;
+    -ms-grid-column: 3;
+    grid-area: calculator;
+  }
+  img {
+    margin-bottom: 1rem;
+    margin-top: 2rem;
+  }
+  footer {
+    margin-bottom: 3rem;
+  }
+}
+
 html,
 body,
 *,
@@ -98,6 +166,6 @@ body,
 .container {
   display: -ms-grid;
   display: grid;
-  width: 95%;
+  width: 90%;
   margin: 0 auto;
 }
