--- a/scss/media-queries/_desktop-query.scss
+++ b/scss/media-queries/_desktop-query.scss
@@ -2,10 +2,12 @@
     .container {
         display: grid;
         width: 80%;
+        height: 100vh;
     }
     header {
         @include center;
         width: 42%;
+        margin-bottom: 2rem;
     }
     .cards {
         display: grid;
